# QuickWebShortcuts

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Config.h  quick_web_shortcuts.cpp  quick_web_shortcuts.h
